--- a/src/TruePokemon.Api/appsettings.json
+++ b/src/TruePokemon.Api/appsettings.json
@@ -1,3 +1,10 @@
 {
-  "AllowedHosts": "*"
+  "ShakespeareTranslationService": {
+    "BaseUrl": "https://api.funtranslations.com/translate/",
+    "HttpVersion": "2.0"
+  },
+  "PokemonDataApiRepository": {
+    "BaseUrl": "https://pokeapi.co/api/v2/",
+    "HttpVersion": "2.0"
+  }
 }
