--- a/test/TruePokemon.IntegrationTests/TruePokemon.IntegrationTests.csproj
+++ b/test/TruePokemon.IntegrationTests/TruePokemon.IntegrationTests.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
-        <RootNamespace>WebApiTemplate.IntegrationTests</RootNamespace>
+        <RootNamespace>TruePokemon.IntegrationTests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
