--- a/src/TruePokemon.Application/TruePokemon.Application.csproj
+++ b/src/TruePokemon.Application/TruePokemon.Application.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>WebApiTemplate.Application</RootNamespace>
+        <RootNamespace>TruePokemon.Application</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
