--- a/test/TruePokemon.UnitTests/TruePokemon.UnitTests.csproj
+++ b/test/TruePokemon.UnitTests/TruePokemon.UnitTests.csproj
@@ -3,10 +3,8 @@
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
-
         <IsPackable>false</IsPackable>
-
-        <RootNamespace>WebApiTemplate.UnitTests</RootNamespace>
+        <RootNamespace>TruePokemon.UnitTests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
