--- a/test/TruePokemon.UnitTests/TruePokemon.UnitTests.csproj
+++ b/test/TruePokemon.UnitTests/TruePokemon.UnitTests.csproj
@@ -8,11 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FluentAssertions" Version="6.6.0" />
-        <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
-        <PackageReference Include="Moq" Version="4.17.2" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -28,6 +24,7 @@
         <ProjectReference Include="..\..\src\TruePokemon.Application\TruePokemon.Application.csproj" />
         <ProjectReference Include="..\..\src\TruePokemon.Core\TruePokemon.Core.csproj" />
         <ProjectReference Include="..\..\src\TruePokemon.Infrastructure\TruePokemon.Infrastructure.csproj" />
+        <ProjectReference Include="..\TruePokemon.Tests.Common\TruePokemon.Tests.Common.csproj" />
     </ItemGroup>
 
     <ItemGroup>
