--- a/src/TruePokemon.Infrastructure/TruePokemon.Infrastructure.csproj
+++ b/src/TruePokemon.Infrastructure/TruePokemon.Infrastructure.csproj
@@ -13,6 +13,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.4" />
+      <PackageReference Include="Polly.Contrib.WaitAndRetry" Version="1.1.1" />
       <PackageReference Include="Serilog" Version="2.10.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
     </ItemGroup>
